test/tests/operators/bitz/error_missing_header.txt
error: unexpected BITZ header length 0
 --> tests/operators/bitz/error_missing_header.tql:5:3
  |
5 |   read_bitz
  |   ^^^^^^^^^ 
  |
  = note: expected 8
